<resources>
    <string name="app_name">CatDogPerson</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="afraid_canines_text">Are you afraid of canines?</string>
    <string name="yes_radioButton">Yes</string>
    <string name="no_radioButton">No</string>
    <string name="comfortable_level">In a scale of 1 to 10, how comfortable are you around felines?</string>
    <string name="comfortable_text">Comfortableness: 1/10</string>
    <string name="cutest_text">Which ones are the cutest?</string>
    <string name="dog_checkBox">Dog</string>
    <string name="cat_checkBox">Cat</string>
    <string name="parrot_checkBox">Parrot</string>
    <string name="drooling_creatures">Are you ok with creatures that drool?</string>
    <string name="yes_droll_checkBox">Yes</string>
    <string name="no_droll_checkBox">No</string>
    <string name="show_result_button">Show Result</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="revealTitle">You are a...</string>
    <string name="resultTextView"></string>
</resources>
